# entanglement

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  PLAN.md  POEM.md  README.md  markdown-demo.md  readme_multiline.txt  test_glob
.cargo/: config.toml
brain-core/: Cargo.toml
brain-core/src/: brain.rs  context.rs  lib.rs  llm.rs  session.rs
brain-core/tests/: actor.rs
brain-llm/: Cargo.toml
brain-llm/src/: anthropic.rs  lib.rs  openai.rs
brain-stdio/: Cargo.toml
brain-stdio/src/: main.rs
entanglement-cli/: Cargo.toml
entanglement-cli/src/: audit.rs  main.rs  pipe.rs  run.rs  session_store.rs
entanglement-cli/src/tui/: app.rs  commands.rs  diff.rs  input_panel.rs  markdown.rs  mod.rs  modals.rs  progress.rs  session_view.rs  sessions.rs  theme.rs  transcript.rs  ui.rs  wrap.rs
entanglement-cli/src/tui/markdown/: md_state.rs
entanglement-core/: Cargo.toml  README.md
entanglement-core/src/: context.rs  holly.rs  host.rs  lib.rs  llm.rs  protocol.rs  session.rs  tools.rs
entanglement-core/src/holly/: config.rs  routing.rs
entanglement-core/src/host/: apply_diff.rs  bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs
entanglement-core/src/session/: emit.rs  ops.rs  replay.rs  round.rs  state.rs  stream.rs  summarize.rs  tools.rs  turn.rs  turn_state.rs
entanglement-core/tests/: actor.rs  agent_generation_pin.rs  agent_model_pin.rs  ambiguous_stop.rs  auto_compact.rs  config_validation.rs  context_limit.rs  fresh_session_handoff.rs  generation_params.rs  hibernate.rs  history_propagation.rs  host_tools.rs  idle_ttl.rs  mid_stream_error.rs  model_switch.rs  oneshot_op.rs  parallel_tools.rs  replay.rs  resume_children.rs  resume_predecessor.rs  resume_reoffer.rs  search_result_persistence.rs  seq_uniqueness.rs  session_lifecycle.rs  set_generation.rs  stop_semantics.rs  system_prompt_resolver.rs  tool_call_delta.rs  tool_mask.rs  tool_spec_resolver.rs  turn_loop.rs  usage.rs  wire_frame_split.rs
entanglement-core/tests/common/: mod.rs
entanglement-llm/: Cargo.toml
entanglement-llm/src/: anthropic.rs  openai.rs
entanglement-provider/: Cargo.toml  README.md
entanglement-provider/src/: anthropic.rs  catalog.rs  client.rs  defaults.yml  gemini.rs  lib.rs  llm.rs  message.rs  openai.rs  sse_frame.rs  web_search.rs
entanglement-provider/src/anthropic/: mod.rs  request.rs  sse.rs
entanglement-provider/src/anthropic/request/: tests.rs
entanglement-provider/src/anthropic/sse/: tests.rs
entanglement-provider/src/client/: mod.rs  status.rs  tests.rs
entanglement-provider/src/gemini/: request.rs  tests.rs
entanglement-provider/src/openai/: mod.rs  request.rs  sse.rs  tests.rs
entanglement-provider/tests/: streaming.rs
entanglement-runtime/: Cargo.toml  README.md
entanglement-runtime/examples/: embedded.rs  embedded_lifecycle.rs  mcp_http.rs
entanglement-runtime/src/: agent_poll.rs  ask_user.rs  bash_live.rs  cancel.rs  extra_roots.rs  file_change.rs  frontmatter.rs  grants.rs  history.rs  hooks.rs  inspect.rs  layers.rs  lib.rs  logging.rs  main.rs  pending.rs  permission.rs  permission_path.rs  persistence.rs  pipe.rs  plan_tasks.rs  policy.rs  propose_plan.rs  run.rs  script.rs  seam.rs  serve.rs  session_store.rs  subagent.rs  system_prompt.rs  tool_names.rs  tool_runner.rs  tools.rs  watch.rs
entanglement-runtime/src/agents/: build.md  debug.md  explore.md  materialize.rs  mod.rs  plan.md
entanglement-runtime/src/config/: agent_generation.rs  agent_models.rs  atomic.rs  ceiling_warn.rs  defaults.yml  env_file.rs  env_key.rs  keys.rs  lock.rs  mcp_persist.rs  mod.rs  template.yml  tests.rs
entanglement-runtime/src/host/: apply_diff.rs  apply_patch.rs  bash.rs  bash_output.rs  call.rs  edit.rs  exec.rs  glob.rs  grep.rs  jobs.rs  mod.rs  read.rs  sandbox.rs  unified_diff.rs  walk.rs  write.rs
entanglement-runtime/src/host/call/: format.rs  mod.rs  output.rs
entanglement-runtime/src/inspect/: agents.rs  config.rs  mod.rs  prompt.rs  skills.rs  tui.rs
entanglement-runtime/src/mcp/: client.rs  http.rs  live.rs  mod.rs  responder.rs  stdio.rs  tool.rs
entanglement-runtime/src/session_store/: tests_log.rs  tests_sessions.rs
entanglement-runtime/src/skills/: commit.md  discovery.rs  load_skill.rs  mod.rs
entanglement-runtime/src/tui/: allow_command.rs  app.rs  attention.rs  bash_command.rs  clipboard.rs  command_palette.rs  commands.rs  diff.rs  editor.rs  event.rs  event_loop.rs  export.rs  input.rs  input_panel.rs  key_dialog.rs  keybindings.rs  mcp_command.rs  mcp_panel.rs  mention.rs  mod.rs  modal_events.rs  modals.rs  progress.rs  selection.rs  session_view.rs  sessions.rs  tool_render.rs  tools_dialog.rs  transcript.rs  ui.rs  wrap.rs
entanglement-runtime/src/tui/app/: allow.rs  bash.rs  compact.rs  construct.rs  dispatch.rs  generation.rs  input.rs  inspect.rs  key.rs  mcp.rs  mention.rs  pickers.rs  quit.rs  state.rs  tests.rs  tools.rs  view.rs
entanglement-runtime/src/tui/input/: tests.rs
entanglement-runtime/src/tui/keybindings/: dispatch.rs  tests.rs
entanglement-runtime/src/tui/markdown/: md_state.rs
entanglement-runtime/src/tui/modals/: inspect.rs  popups.rs  sessions.rs
entanglement-runtime/src/tui/session_view/: reducer.rs  scroll.rs  tests.rs
entanglement-runtime/src/tui/sessions/: tests.rs
entanglement-runtime/src/tui/transcript/: append.rs  block.rs  cache.rs  question.rs  render_run.rs  segment.rs  tests.rs
entanglement-runtime/src/tui/ui/: sidebar.rs
entanglement-runtime/tests/: agent_definitions.rs  agent_generation.rs  agent_models.rs  apply_patch.rs  ask_user.rs  compact_fork.rs  hooks.rs  host_tools.rs  load_skill.rs  mcp_http.rs  permission_dispatch.rs  plan_tasks.rs  policy_seam.rs  propose_plan.rs  provider_selection.rs  record_sink.rs  reoffer_dedupe.rs  replay_from.rs  rhai.rs  serve.rs  skill_mask.rs  spawn_prompt_persistence.rs  stop_abort.rs  stop_abort_inflight_cleanup.rs  subagent_spawn.rs  system_prompt_assembly.rs  tool_mask.rs  user_config.rs
entanglement-stdio/: Cargo.toml
entanglement-stdio/src/: main.rs
skutter/: Cargo.toml
skutter/src/: main.rs
(+159 files in other folders)
