[workspace]
members = ["entanglement-core", "entanglement-llm", "entanglement-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/xmiksay/entanglement"

[workspace.dependencies]
entanglement-core = { path = "entanglement-core" }
entanglement-llm = { path = "entanglement-llm" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
# Pure-Rust, no network deps; both hygiene-gate-clean for entanglement-core
# (ADR-0008). `glob` drives glob + grep file enumeration; `regex` drives grep.
glob = "0.3"
regex = "1"
# rustls (not native-tls) so builds need no system OpenSSL headers.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset"] }
# TUI dependencies (for entanglement-cli only)
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
tui-textarea = "0.7"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

[profile.release]
lto = "thin"
codegen-units = 1
