[workspace]
members = ["entanglement-core", "entanglement-provider", "entanglement-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/xmiksay/entanglement"

[workspace.dependencies]
entanglement-core = { path = "entanglement-core" }
entanglement-provider = { path = "entanglement-provider" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
rand = "0.8"
httpdate = "1"
clap = { version = "4", features = ["derive"] }
# Pure-Rust, no network deps; both hygiene-gate-clean for entanglement-core
# (ADR-0008). `glob` drives glob + grep file enumeration; `regex` drives grep.
glob = "0.3"
regex = "1"
diffy = "0.5"
# rustls (not native-tls) so builds need no system OpenSSL headers.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset"] }
# TUI dependencies (entanglement-runtime only, behind its `tui` feature — ADR-0025)
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
