[workspace]
members = ["entanglement-core", "entanglement-provider", "entanglement-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/xmiksay/entanglement"

[workspace.dependencies]
entanglement-core = { path = "entanglement-core" }
entanglement-provider = { path = "entanglement-provider" }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Pure-Rust SHA-256 — hygiene-gate-clean (no UI/transport); used for the
# EchoLlm system-prompt fingerprint.
sha2 = "0.10"
# Pure-Rust base64 — inline-encodes an image `read` for the model's image
# content block (#221). Lean-build + cross-compile clean.
base64 = "0.22"
dirs = "5"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
rand = "0.8"
httpdate = "1"
clap = { version = "4", features = ["derive"] }
# Pure-Rust, no network deps; both hygiene-gate-clean for entanglement-core
# (ADR-0008). `glob` drives glob + grep file enumeration; `regex` drives grep.
glob = "0.3"
regex = "1"
# Unix syscalls for the exec tools: process-group kill on timeout/cancel so a
# command's grandchildren can't orphan (#168). Runtime-only, cross/lean-clean.
libc = "0.2"
# Embedded, capability-sandboxed script engine for the `rhai` host tool
# (ADR-0046). Pure Rust, cross-compile + lean-build friendly. `sync` makes the
# engine/`Dynamic` Send+Sync (needed across the spawn_blocking bridge); `serde`
# serializes a script's return value.
rhai = { version = "1", default-features = false, features = ["std", "sync", "serde"] }
diffy = "0.5"
# rustls (not native-tls) so builds need no system OpenSSL headers.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "charset"] }
# WebSocket `serve` head (entanglement-runtime only, behind its `serve` feature —
# ADR-0025/ADR-0048). Loopback-bound local HTTP+WS server; the `ws` feature adds
# the WebSocket upgrade path. tokio-tungstenite drives the serve integration
# tests' WS client (dev-dep only).
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.29"
# TUI dependencies (entanglement-runtime only, behind its `tui` feature — ADR-0025)
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
unicode-width = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
