[package]
name = "entanglement-cli"
description = "Head crate for the entanglement agent engine (binary `skutter`): stdio `run`/`pipe` today; future WebSocket `serve` and TUI `tui` subcommands."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "skutter"
path = "src/main.rs"

[dependencies]
entanglement-core = { workspace = true }
entanglement-llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
