[package]
name = "entanglement-core"
description = "Headless AI coding agent engine: reasoning + tool-execution loop, UI-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "entanglement_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
