[package]
name = "entanglement-core"
description = "Headless AI coding agent engine: reasoning + tool-execution loop, UI-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "entanglement_core"
path = "src/lib.rs"

[dependencies]
entanglement-provider = { workspace = true }
# Per-crate feature trim (#502, ADR-0135): `rt` backs `tokio::spawn`/`task::yield_now`,
# `macros` backs `select!`/`#[tokio::test]`, `sync` backs `broadcast`/`mpsc`,
# `time` backs `sleep`/`timeout`/`interval`/`Instant`. No fs/net/process/signal
# use in core.
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
