[package]
name = "entanglement-llm"
description = "Concrete LLM backends for the entanglement agent engine (z.ai GLM + Anthropic SSE streaming)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "entanglement_llm"
path = "src/lib.rs"

[dependencies]
entanglement-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
