[package]
name = "entanglement-provider"
description = "Concrete LLM backends for the entanglement agent engine (z.ai GLM + Anthropic SSE streaming)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lib]
name = "entanglement_provider"
path = "src/lib.rs"

[dependencies]
# Per-crate feature trim (#502, ADR-0135): `rt`/`macros` back `tokio::spawn` +
# `#[tokio::test]`; `sync` backs the retry semaphore; `time` backs
# sleep/timeout backoff; `net`/`io-util` back `tests/streaming.rs`'s hand-rolled
# loopback SSE server (no separate `tokio` dev-dependency exists to scope those
# two to tests only).
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "net", "io-util"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
httpdate = "1"
