[package]
name = "entanglement-runtime"
description = "Head crate for the entanglement agent engine (binary `skutter`): stdio `run`/`pipe` today; future WebSocket `serve` and TUI `tui` subcommands."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "entanglement_runtime"
path = "src/lib.rs"

[[bin]]
name = "skutter"
path = "src/main.rs"

[dependencies]
entanglement-core = { workspace = true }
entanglement-provider = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
# TUI dependencies
ratatui = { workspace = true }
crossterm = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
diffy = { workspace = true }
unicode-width = { workspace = true }
dirs = "5"
# Host tool dependencies
glob = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
