[package]
name = "entanglement-runtime"
description = "Head crate for the entanglement agent engine (binary `skutter`): stdio `run`/`pipe`, TUI `tui`, and the local WebSocket `serve` head (behind the `serve` feature). With `--no-default-features` it is a lean library exposing the tool-execution loop, permission dispatch, sub-agent spawn, and persistence machinery (no CLI/TUI/transport deps — see ADR-0025)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# Document the full feature surface on docs.rs (the lean no-default-features
# library is a deliberate subset — ADR-0025).
[package.metadata.docs.rs]
all-features = true

[lib]
name = "entanglement_runtime"
path = "src/lib.rs"

[[bin]]
name = "skutter"
path = "src/main.rs"
required-features = ["cli", "provider", "tui"]

# `mcp::HttpClient` (#312) is compiled out of the lean `--no-default-features`
# library `embedded.rs`/`embedded_lifecycle.rs` build against, so it needs its
# own example gated on the feature that carries it (#364).
[[example]]
name = "mcp_http"
path = "examples/mcp_http.rs"
required-features = ["mcp-http"]

# The `rhai` tool integration suite needs the (now optional, #502) `rhai`
# feature — gated the same way `mcp_http` is gated above.
[[test]]
name = "rhai"
path = "tests/rhai.rs"
required-features = ["rhai"]

[features]
default = ["tui", "serve", "mcp-http", "rhai"]
# Head plumbing for `skutter`: arg parsing (clap) + log init (tracing-subscriber)
# + hidden key prompt (rpassword, for `config set-key` — #304).
cli = ["dep:clap", "dep:tracing-subscriber", "dep:rpassword"]
# LLM providers (reqwest via entanglement-provider). Split from `cli` (#208) so a
# future `serve`/`ws` head can pull providers without dragging in clap.
provider = ["dep:entanglement-provider"]
# WebSocket `serve` head (#153, ADR-0048): a loopback-bound axum HTTP+WS server,
# the browser twin of the TUI. Implies `cli` + `provider` (reached through the
# clap CLI, drives a real provider); `axum`/`futures` stay behind it so the lean
# library and `--no-default-features` builds carry no transport (ADR-0025).
serve = ["cli", "provider", "dep:axum", "dep:futures"]
# Terminal UI head (`skutter tui`). Implies `cli` + `provider`: the TUI is only
# reachable through the clap CLI, and tui/ itself imports entanglement-provider
# (ModelInfo, models_for, HttpClient in tui/app.rs + tui/mod.rs).
tui = ["cli", "provider", "dep:ratatui", "dep:crossterm", "dep:pulldown-cmark", "dep:syntect", "dep:diffy", "dep:unicode-width"]
# Streamable-HTTP MCP transport (#312, ADR-0080): remote MCP servers over
# `POST /mcp` with per-server headers/auth. Pulls `reqwest` + `futures` as direct
# deps behind this gate so the lean library / `--no-default-features` build carries
# no HTTP-MCP transport (matching how `serve` gates axum — ADR-0025). stdio MCP
# stays feature-free (tokio process only).
mcp-http = ["dep:reqwest", "dep:futures"]
# The sandboxed `rhai` script tool (#122, ADR-0046; default-on, #502/ADR-0135
# amending ADR-0025): one of the heaviest always-compiled deps, so a lean
# embedder that never registers `rhai` can now drop it via
# `--no-default-features` (no `rhai` in that build's feature list). Every
# existing default-feature build (incl. the `skutter` binary) is unaffected.
rhai = ["dep:rhai"]

[dependencies]
entanglement-core = { workspace = true }
entanglement-provider = { workspace = true, optional = true }
# Per-crate feature trim (#502, ADR-0135): the head crate exercises nearly the
# whole tokio surface — `rt`+`rt-multi-thread`+`macros` back `#[tokio::main]`
# (`src/main.rs`) and the one `flavor = "multi_thread"` test
# (`src/extra_roots.rs`); `sync`/`time` back the mpsc/broadcast/oneshot/watch +
# sleep/timeout/interval usage throughout; `fs`/`process` back the host tools
# (`host::edit`/`write`/`read`/`bash`/`call`/mcp stdio); `net` backs `serve` +
# the streamable-HTTP MCP transport's tests; `io-util`/`io-std` back the exec
# tools' piping and `pipe`'s stdin read; `signal` backs `ctrl_c()` in `serve`/
# `tui`. No separate `tokio` dev-dependency exists, so this single list also
# has to satisfy every `#[cfg(test)]`/`tests/*.rs` need.
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "process", "net", "io-util", "io-std", "signal"] }
anyhow = { workspace = true }
clap = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
# TUI dependencies (behind the `tui` feature — ADR-0025)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }
# WebSocket `serve` head (behind the `serve` feature — ADR-0025/ADR-0048)
axum = { workspace = true, optional = true }
# `futures` backs SSE streaming for both `serve` (WS) and the HTTP MCP transport.
futures = { workspace = true, optional = true }
# Streamable-HTTP MCP transport (behind the `mcp-http` feature — #312/ADR-0080).
reqwest = { workspace = true, optional = true }
pulldown-cmark = { workspace = true, optional = true }
syntect = { workspace = true, optional = true }
diffy = { workspace = true, optional = true }
unicode-width = { workspace = true, optional = true }
dirs = { workspace = true }
# Host tool dependencies
glob = { workspace = true }
regex = { workspace = true }
# Process-group kill for the exec tools (`bash`/`call`) on timeout/cancel (#168).
libc = { workspace = true }
async-trait = { workspace = true }
# `FileChange` audit content hash (#202). Pure Rust — rides in the lean library.
sha2 = { workspace = true }
# `read` inline-base64-encodes an image file for its image content block (#221).
base64 = { workspace = true }
# `rhai` host tool — embedded sandboxed script engine (ADR-0046). Optional,
# default-on (behind the `rhai` feature, #502/ADR-0135): pure Rust so it stays
# lean-build/cross-compile clean when enabled, but is one of the heaviest
# always-compiled deps, so a lean embedder can opt out via
# `--no-default-features`.
rhai = { workspace = true, optional = true }
# Advisory cross-process file lock for the managed read-modify-write writes
# (grants.yml / agent-models.yml / the env file, #329).
fd-lock = { workspace = true }
# Definitions-dir + managed-file watcher (#329). Pure-Rust/inotify, no
# transport deps — rides in the lean library.
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

[dev-dependencies]
tempfile = "3"
async-trait = { workspace = true }
# WS client for the `serve` head integration tests (drives a real socket).
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
