[package]
name = "skutter"
description = "Terminal head for the entanglement agent engine: one-shot `run` and bidirectional `pipe` (NDJSON)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "skutter"
path = "src/main.rs"

[dependencies]
entanglement-core = { workspace = true }
entanglement-llm = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
